Fix: visibility to css instead for fouc fix, trying

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,6 +110,7 @@ html,
 body {
   height: 100%;
   min-height: 100vh;
+  visibility: hidden;
 }
 /* hide #bmc-wbtn on small screens */
 @media only screen and (max-width: 480px) {
